ingress/home-deploy-svc.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: home-deployment 
  labels: 
    app: home 
spec: 
  replicas: 2
  selector: 
    matchLabels: 
      app: home 
  template: 
    metadata: 
      name: home-template 
      labels: 
        app: home 
    spec: 
      containers: 
        - name: nginx-container 
          image: nginx:latest
          ports: 
            - name: myport 
              containerPort: 80
          resources: 
            requests: 
              cpu: "100m"
              memory: "64Mi" 
            limits: 
              cpu: "200m"
              memory: "128Mi"
...
---
apiVersion: v1 
kind: Service 
metadata: 
  name: home-svc 
  labels: 
    app: home 
spec: 
  type: ClusterIP 
  selector: 
    app: home 
  ports: 
    - name: home-svc-port 
      protocol: TCP 
      port: 80 
      targetPort: 80
...
