ingress/laptop-deploy-svc.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: laptop-deployment 
  labels: 
    app: laptop
spec: 
  replicas: 2
  selector: 
    matchLabels: 
      app: laptop
  template: 
    metadata: 
      name: laptop-template 
      labels: 
        app: laptop 
    spec: 
      containers: 
        - name: httpd-container 
          image: httpd:latest
          ports: 
            - name: myport 
              containerPort: 80
          resources: 
            requests: 
              cpu: "100m"
              memory: "64Mi" 
            limits: 
              cpu: "200m"
              memory: "128Mi"
...
---
apiVersion: v1 
kind: Service 
metadata: 
  name: laptop-svc 
  labels: 
    app: laptop
spec: 
  type: ClusterIP 
  selector: 
    app: laptop
  ports: 
    - name: laptop-svc-port 
      protocol: TCP 
      port: 80 
      targetPort: 80
...
