ingress/mobile-deploy-svc.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: mobile-deployment 
  labels: 
    app: mobile
spec: 
  replicas: 2
  selector: 
    matchLabels: 
      app: mobile
  template: 
    metadata: 
      name: mobile-template 
      labels: 
        app: mobile
    spec: 
      containers: 
        - name: tomcat-container 
          image: tomcat:latest
          ports: 
            - name: myport 
              containerPort: 8080
          resources: 
            requests: 
              cpu: "100m"
              memory: "64Mi" 
            limits: 
              cpu: "200m"
              memory: "128Mi"
...
---
apiVersion: v1 
kind: Service 
metadata: 
  name: mobile-svc 
  labels: 
    app: mobile
spec: 
  type: ClusterIP 
  selector: 
    app: mobile
  ports: 
    - name: mobile-svc-port 
      protocol: TCP 
      port: 8080
      targetPort: 8080
...
